GameTest erweitert